# eth2077

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  ETH2077-EXECUTION-PLAN.md  README.md  assumptions-registry.json  docker-compose.yml  theorem-registry.json
crates/eth2077-bench/: Cargo.toml
crates/eth2077-bench/src/: main.rs  microbench.rs
crates/eth2077-bench/tests/: differential_harness.rs
crates/eth2077-bridge/: Cargo.toml
crates/eth2077-bridge/src/: engine_api.rs  eth_rpc.rs  forkchoice.rs  lib.rs  payload_converter.rs  traits.rs
crates/eth2077-bridge/tests/: engine_api.rs  forkchoice_test.rs  payload_converter_test.rs  traits_test.rs
crates/eth2077-execution/: Cargo.toml
crates/eth2077-execution/src/: blob_sidecar.rs  block_builder.rs  block_validator.rs  eip7702.rs  eip7864.rs  eip7928.rs  eip8007.rs  eip8070.rs  eip8079.rs  eip8142.rs  executor.rs  genesis.rs  ingress.rs  lib.rs  state.rs  traits.rs
crates/eth2077-execution/tests/: blob_sidecar_test.rs  eip7702_conformance_test.rs  eip7864_test.rs  eip7928_test.rs  eip8007_test.rs  eip8070_test.rs  eip8079_test.rs  eip8142_test.rs  gate0_transfer.rs  gate1_block_pipeline.rs  traits_test.rs
crates/eth2077-live-bench/: Cargo.toml
crates/eth2077-live-bench/src/: main.rs
crates/eth2077-node/: Cargo.toml
crates/eth2077-node/src/: lib.rs
crates/eth2077-node/tests/: gate4_devnet.rs
crates/eth2077-oob-consensus/: Cargo.toml
crates/eth2077-oob-consensus/src/: consensus.rs  consensus_execution.rs  fast_path.rs  lib.rs  mock.rs  traits.rs  types.rs  validator.rs
crates/eth2077-oob-consensus/tests/: adversarial_equivocation_test.rs  crash_recovery_test.rs  gate2_bft_consensus.rs  mock_test.rs  partition_churn_test.rs  replay_equivocation_test.rs  traits_test.rs
crates/eth2077-p2p/: Cargo.toml
crates/eth2077-p2p/src/: codec.rs  gossip.rs  lib.rs  node.rs  peer.rs  sync_protocol.rs  transport.rs
crates/eth2077-p2p/tests/: gate3_p2p_network.rs
crates/eth2077-types/: Cargo.toml
crates/eth2077-types/src/: aggregate_throughput.rs  aps_integration.rs  assumption_checker.rs  attester_includer.rs  bals_integration.rs  blob_streaming.rs  bootnode_discovery.rs  canonical.rs  chain_spec.rs  ci_artifacts.rs  ci_formal_gate.rs  citadel_port.rs  claim_integrity.rs  container_deploy.rs  da_throughput.rs  ec_broadcast.rs  ef_architecture.rs  eip7919.rs  eip7938.rs  eip7999.rs  eip8025.rs  eip8077.rs  eip8141.rs  eip_delta_review.rs  eip_portability.rs  epbs.rs  epbs_integration.rs  fast_l1.rs  faucet_explorer.rs  fault_injection.rs  focil.rs  focil_integration.rs  formal_verification.rs  genesis_builder.rs  gigagas_l1.rs  go_nogo_gate.rs  hyperscale_state.rs  lib.rs  lucid_mempool.rs  metrics_dashboard.rs  (+27 more)
crates/eth2077-types/tests/: aggregate_throughput_test.rs  aps_integration_test.rs  assumption_checker_test.rs  attester_includer_test.rs  bals_integration_test.rs  blob_streaming_test.rs  bootnode_discovery_test.rs  chain_spec_test.rs  ci_artifacts_test.rs  ci_formal_gate_test.rs  citadel_port_test.rs  claim_integrity_test.rs  container_deploy_test.rs  da_throughput_test.rs  ec_broadcast_test.rs  ef_architecture_test.rs  eip7919_test.rs  eip7938_test.rs  eip7999_test.rs  eip8025_test.rs  eip8077_test.rs  eip8141_test.rs  eip_delta_review_test.rs  eip_portability_test.rs  epbs_integration_test.rs  epbs_test.rs  fast_l1_test.rs  faucet_explorer_test.rs  fault_injection_test.rs  focil_integration_test.rs  focil_test.rs  formal_verification_test.rs  genesis_builder_test.rs  gigagas_l1_test.rs  go_nogo_gate_test.rs  hyperscale_state_test.rs  lucid_mempool_test.rs  metrics_dashboard_test.rs  migration_plan_test.rs  million_tps_test.rs  (+25 more)
docs/: BLOCKSCOUT_DEVNET.md  DEVNET.md  EIP_7732_IMPLEMENTATION_PLAN.md  EIP_EXECUTION_MATRIX.md  ETH2077_ARCHITECTURE.md  FORMAL_VERIFICATION_GATES.md  INVESTOR_DEMO_MODE.md  LIVE_TPS_PROOF.md  NETWORK_OBSERVATORY.md  ROADMAP.md  STRAWMAP_DEMOLITION_MATRIX.md  TESTNET_LAUNCH_ALPHA.md  THREAT_MODEL_V1.md  YOLO_ROADMAP_NOW.md
proofs/: ETH2077Proofs.lean  lake-manifest.json  lakefile.lean
reports/: baseline-2026-03-02.md  citadel-topology-bench-summary-2026-03-02.md  eip-step-gate-2026-03-02-eip-4844.md  eip-step-gate-2026-03-02-eip-7702.md  eth2077-bottleneck-analysis-2026-03-02.md  eth2077-bottleneck-sweep-2026-03-02.json  eth2077-bottleneck-sweep-2026-03-02.md  eth2077-mesh-bench-2026-03-02-eip-7702.json  eth2077-mesh-bench-2026-03-02-eip-7702.md  eth2077-mesh-bench-2026-03-02.md  live-tps-2026-03-02-101627.json  live-tps-2026-03-02-101627.md  live-tps-2026-03-02-103917.json  live-tps-2026-03-02-103917.manifest.json  live-tps-2026-03-02-103917.md  live-tps-2026-03-02-103917.sha256  live-tps-2026-03-02-104025.json  live-tps-2026-03-02-104025.manifest.json  live-tps-2026-03-02-104025.md  live-tps-2026-03-02-104025.sha256  live-tps-2026-03-02-104217-tick1000-s1-g21000.json  live-tps-2026-03-02-104217-tick1000-s1-g21000.manifest.json  live-tps-2026-03-02-104217-tick1000-s1-g21000.md  live-tps-2026-03-02-104217-tick1000-s1-g21000.sha256  live-tps-2026-03-02-104217-tick1000-s1-g30000.json  live-tps-2026-03-02-104217-tick1000-s1-g30000.manifest.json  live-tps-2026-03-02-104217-tick1000-s1-g30000.md  live-tps-2026-03-02-104217-tick1000-s1-g30000.sha256  live-tps-2026-03-02-104217-tick1000-s4-g21000.json  live-tps-2026-03-02-104217-tick1000-s4-g21000.manifest.json  live-tps-2026-03-02-104217-tick1000-s4-g21000.md  live-tps-2026-03-02-104217-tick1000-s4-g21000.sha256  live-tps-2026-03-02-104217-tick1000-s4-g30000.json  live-tps-2026-03-02-104217-tick1000-s4-g30000.manifest.json  live-tps-2026-03-02-104217-tick1000-s4-g30000.md  live-tps-2026-03-02-104217-tick1000-s4-g30000.sha256  live-tps-2026-03-02-104217-tick1000-s8-g21000.json  live-tps-2026-03-02-104217-tick1000-s8-g21000.manifest.json  live-tps-2026-03-02-104217-tick1000-s8-g21000.md  live-tps-2026-03-02-104217-tick1000-s8-g21000.sha256  (+60 more)
scripts/: blockscout_down.sh  blockscout_up.sh  build_testnet_artifacts.sh  check_eth2077_formal_gates.sh  check_proof_debt.sh  check_testnet_go_nogo.sh  check_theorem_assumption_matrix.sh  (+11 more)
(+50 files in other folders)
