[workspace]
resolver = "2"
members = [
  "crates/eth2077-types",
  "crates/eth2077-execution",
  "crates/eth2077-oob-consensus",
  "crates/eth2077-bridge",
  "crates/eth2077-bench",
  "crates/eth2077-live-bench",
  "crates/eth2077-node",
  "crates/eth2077-testnet",
  "crates/eth2077-p2p",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["ETH2077 Contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
alloy-primitives = { version = "1.5", features = ["serde", "rlp"] }
alloy-rlp = { version = "0.3", features = ["derive"] }
alloy-consensus = "1.5"
alloy-eips = "1.5"
alloy-trie = "0.9"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
