[package]
name = "eth2077-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
eth2077-types = { path = "../eth2077-types" }
eth2077-execution = { path = "../eth2077-execution" }
eth2077-oob-consensus = { path = "../eth2077-oob-consensus" }
eth2077-node = { path = "../eth2077-node" }

[dev-dependencies]
sha2 = "0.10"
tokio = { workspace = true, features = ["full", "test-util"] }
