[package]
name = "eth2077-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
eth2077-types = { path = "../eth2077-types" }
eth2077-execution = { path = "../eth2077-execution" }
alloy-primitives = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonrpsee = { version = "0.24", features = ["server", "http-client", "macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
