[package]
name = "eth2077-node"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
eth2077-types = { path = "../eth2077-types" }
eth2077-execution = { path = "../eth2077-execution" }
eth2077-oob-consensus = { path = "../eth2077-oob-consensus" }
eth2077-bridge = { path = "../eth2077-bridge" }
serde = { workspace = true }
serde_json = { workspace = true }
hex = "0.4"
rlp = "0.5"
revm = { version = "34", default-features = true, features = ["std"] }
