[package]
name = "eth2077-node"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "eth2077-devnet"
path = "src/bin/devnet.rs"

[dependencies]
eth2077-types = { path = "../eth2077-types" }
eth2077-execution = { path = "../eth2077-execution" }
eth2077-oob-consensus = { path = "../eth2077-oob-consensus" }
eth2077-bridge = { path = "../eth2077-bridge" }
eth2077-p2p = { path = "../eth2077-p2p" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
alloy-primitives = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
rlp = "0.5"
revm = { version = "34", default-features = true, features = ["std"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
jsonrpsee = { version = "0.24", features = ["server", "http-client"] }
