[package]
name = "eth2077-oob-consensus"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
eth2077-types = { path = "../eth2077-types" }
serde = { workspace = true }
tokio = { version = "1", features = ["rt"] }
alloy-primitives.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
